--- a/includes/styles.html
+++ b/includes/styles.html
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href="../sass/all.min.css"/>
-<link rel="stylesheet" href="../sass/normalize.css"/>
-<link rel="stylesheet" href="../sass/myframework.css"/>
-<link rel="stylesheet" href="../sass/main.css"/>
+<link rel="stylesheet" href="./sass/all.min.css"/>
+<link rel="stylesheet" href="./sass/normalize.css"/>
+<link rel="stylesheet" href="./sass/myframework.css"/>
+<link rel="stylesheet" href="./sass/main.css"/>
