first join javascript for dashboard

--- a/includes/mixins.pug
+++ b/includes/mixins.pug
@@ -22,7 +22,7 @@ mixin our_stuff(n, name, desc)
 
 mixin head_nav()
   li
-    a(class="active p-10 rad-6" href="#", target="_blank", rel="noopener noreferrer")
+    a(class="active p-10 rad-6" href="#", rel="noopener noreferrer")
       i(class="fa-brands fa-dashcube fa-fw")
       span Dashboard
 
