--- a/index.pug
+++ b/index.pug
@@ -15,35 +15,35 @@ html(lang="en" dir="ltr")
         h3(class="p-rel txt-c mt-0") #{name}
         ul
           li
-            a(class="active p-10 rad-6" href="index.html", target="_blank", rel="noopener noreferrer")
+            a(class="p-10 rad-6" href="index.html", rel="noopener noreferrer")
               i(class="fa-brands fa-dashcube fa-fw")
               span Dashboard
           li
-            a(class="p-10 rad-6" href="settings.html", target="_blank", rel="noopener noreferrer")
+            a(class="p-10 rad-6" href="settings.html", rel="noopener noreferrer")
               i(class="fa-solid fa-gear fa-fw")
               span Settings
           li
-            a(class="p-10 rad-6" href="profile.html", target="_blank", rel="noopener noreferrer")
+            a(class="p-10 rad-6" href="profile.html", rel="noopener noreferrer")
               i(class="fa-regular fa-user fa-fw")
               span Profile
           li
-            a(class="p-10 rad-6" href="projects.html", target="_blank", rel="noopener noreferrer")
+            a(class="p-10 rad-6" href="projects.html", rel="noopener noreferrer")
               i(class="fa-solid fa-diagram-project fa-fw")
               span Projects
           li
-            a(class="p-10 rad-6" href="courses.html", target="_blank", rel="noopener noreferrer")
+            a(class="p-10 rad-6" href="courses.html", rel="noopener noreferrer")
               i(class="fa-solid fa-sheet-plastic fa-fw")
               span Courses
           li
-            a(class="p-10 rad-6" href="friends.html", target="_blank", rel="noopener noreferrer")
+            a(class="p-10 rad-6" href="friends.html", rel="noopener noreferrer")
               i(class="fa-solid fa-user-group fa-fw")
               span Friends
           li
-            a(class="p-10 rad-6" href="files.html", target="_blank", rel="noopener noreferrer")
+            a(class="p-10 rad-6" href="files.html", rel="noopener noreferrer")
               i(class="fa-regular fa-file fa-fw")
               span Files
           li
-            a(class="p-10 rad-6" href="plans.html", target="_blank", rel="noopener noreferrer")
+            a(class="p-10 rad-6" href="plans.html", rel="noopener noreferrer")
               i(class="fa-regular fa-lightbulb fa-fw")
               span Plans
       //- End board
