--- a/includes/vars.pug
+++ b/includes/vars.pug
@@ -1,5 +1,5 @@
 -
-  let temp_name= 'Admin Dashboard'.toUpperCase();
-  let name= 'Osman'.toUpperCase();
+  let temp_name= 'Admin'.toUpperCase();
+  let name= 'Hani'.toUpperCase();
   let nav_links= ['Services', 'About', 'Contact', 'Sigma'];
   let our_work_nav= ['Photos', 'Videos', 'Apps', 'Lectures'];
