--- a/index.pug
+++ b/index.pug
@@ -192,7 +192,7 @@ html(lang="en" dir="ltr")
             div(class="top d-flex al-c")
               img(class="avatar rad-half mr-15" src="imgs/land-pyke.jpg", alt="", srcset="")
               .info
-                p(class="mb-5 fw-bold") Mohamed Osman
+                p(class="mb-5 fw-bold") Hani Abdallah
                 span.c-grey About 2 Hours Ago
             div(class="post-content txt-c-mobile pt-20 pb-20 mt-20 mb-20")
               |You can fool all of the people some of the time, and some of the people all of the time, but you can't fool all of the people all of the time.
